--- a/ReactiveWithDev/Views/MainWindow.xaml
+++ b/ReactiveWithDev/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<dx:ThemedWindow x:Class="WpfApp1.MainWindow"
+﻿<dx:ThemedWindow x:Class="ReactiveWithDev.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,7 +10,7 @@
         xmlns:dxre="http://schemas.devexpress.com/winfx/2008/xaml/richedit"
         xmlns:avalonDock="https://github.com/Dirkster99/AvalonDock"
         xmlns:diagc="http://schemas.devexpress.com/winfx/2008/xaml/diagram"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:ReactiveWithDev.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <UniformGrid Columns="2">
